2008-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Change getStandardLibrary to getStandardLibraries (a list),
	  so we can handle both the arch-invariant and arch-specific python
	  site-packages.
	  This makes sure that -q/--stdlib works the same way on 32-bit and
	  64-bit systems.
	  Fixes #1564614, and makes the new test suite pass.
	  (Try it with python test/main.py)

2008-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_stdlib.py:
	  Rename and document test.

2008-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/common.py:
	* test/expected/test_zope_interface:
	* test/input/test_zope_interface.py:
	* test/main.py:
	* test/test_stdlib.py:
	  Add a first stab at a unittest-based testsuite.
	  Add a test for bug #382217 that I wanted to fix that can't
	  be tested in the current test suite.

2008-07-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_input/test86.py:
	  Add a test for except KeyboardInterrupt, which was fixed by Neil
	  in pychecker/CodeChecks.py: 1.170 on 23-Apr-07.

2008-07-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Allow using setattr with a static argument inside lambda calls,
	  where the alternative is a syntax error since you're not allowed to
	  do an assignment expression.
	  Fixes #1565876.

2008-07-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Revert IDLE patch which breaks test42.py
	  See #2007203.

2008-07-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	* pychecker/warn.py:
	  Respect the blacklist of modules when warning about classes for
	  which the module cannot be found.
	* test_check.sh:
	* test_expected/test101:
	* test_input/test101.py:
	  Add a test for it.
	  Fixes #1563495.

2008-07-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test100:
	* test_input/test100.py: